--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,14 @@ body{
                     width: 100%;
                     height: 100%;
                 }
+                .snakeHead{
+                    @extend .main__surface-carre;
+                    background-color: red;
+                }
+                .mouse{
+                    @extend .main__surface-carre;
+                    background-color: blue;
+                }
             }
 
         }
